add autoClicker for 5s

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="demo__gallery">
           <div class="demo__help">
             <img src="./logo.svg" alt="">
-              Click the photo !
+              <p>Click the photo !</p>
+              <p>Auto click the photo in 5 seconds</p>
             </div>
       </div>
       <div class="demo__infomation hide">
