--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       <div class="demo__gallery">
           <div class="demo__help">
             <img src="./logo.svg" alt="">
-              <p>Click the photo !</p>
-              <p>Auto click the photo in 5 seconds</p>
+            <ul>
+              <li>Click the photo !</li>
+              <li>Photo will auto change in 5 seconds</li>
+            </ul>
             </div>
       </div>
       <div class="demo__infomation hide">
